[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "appleseed-evolution"
version = "0.1.0"
description = "Governed local evolution layer for Appleseed-like agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
appleseed-evolution = "appleseed_evolution.cli:main"

[tool.setuptools.packages.find]
include = ["appleseed_evolution*"]
